tests/baselines/reference/classAbstractInstantiations1.errors.txt
classAbstractInstantiations1.ts(11,1): error TS2511: Cannot create an instance of an abstract class.
classAbstractInstantiations1.ts(12,1): error TS2511: Cannot create an instance of an abstract class.
classAbstractInstantiations1.ts(14,1): error TS2511: Cannot create an instance of an abstract class.


==== classAbstractInstantiations1.ts (3 errors) ====
    //
    // Calling new with (non)abstract classes.
    //
    
    abstract class A {}
    
    class B extends A {}
    
    abstract class C extends B {}
    
    new A;
    ~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    new A(1); // should report 1 error
    ~~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    new B;
    new C;
    ~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    
    var a : A;
    var b : B;
    var c : C;
    
    a = new B;
    b = new B;
    c = new B;
    